--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
         <form id="form" novalidate>
           <div class="data">
-            <p>How much was your bill?</p>
+            <p>How much was your bill..?</p>
             <input class="fields" type="number" name="amount"  />
             <p class="error amount">Enter the value !!!</p>
           </div>
